# pydantic_mermaid

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: animals.md  animals.py  animals_birds.md  country.md  country.py  country_all.md  country_dependency.md  country_inheritance.md  usa.py  usa_both.md  usa_dependency.md  usa_inheritance.md
pydantic_mermaid/: __init__.py  __main__.py  mermaid_generator.py  models.py
src/pydantic_mermaid/: __init__.py  __main__.py  mermaid_generator.py  models.py  pydantic_parser.py  template.j2
tests/: test_animals.py  test_basic_test.py  test_cat_dog_shop.py  test_contry.py  test_enum.py  test_gen.py  test_gen_310.py  test_gen_38.py  test_main.py  test_marriage.py  test_usa.py  utils.py
tests/issues/: issue4.md  issue4.py
tests/mock/: cat_and_dogs.md  cat_dog_shop.py  enum_example.md  enum_example.py  marriage.md  marriage.py  show_optional.md  show_optional.py  show_optoinal.md
tests/mock/py310/: show_optional.md  show_optional.py
tests/mock/py38/: show_optional.py
